--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,14 @@ body {
   margin: 20px 10px;
 } 
 
-.fixed-position {
+.draggable-element {
   position: fixed;
+  margin: 0px;
+  margin-top: 20px;
   left: 0;
   right: 0;
 }
 
 [data-drop-target] {
-  cursor: move;
+  cursor: grab;
 }
