--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,18 @@ body {
   border-radius: 10px;
   margin: 10px 10px;
 }
+.custom-box {
+  background-color: rgba(0,0,0,0.2); 
+  width: 100%; 
+  height: 100%; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  border-radius: 10px;
+}
+
+
+/* plugin specific styles */
 
 .draggable-element {
   margin: 0px;
